# devtalk-django-patterns

./: .gitignore
code/: .env.example  .pdm-python  README.md  pyproject.toml
code/common/ports/: crm.py  email.py  wms.py
code/config/: errors.py  settings.py  urls.py
code/crm/: apps.py
code/crm/adapters/: crm.py
code/notifications/: apps.py
code/notifications/adapters/: emails.py
code/orders/: apps.py  models.py  serializers.py  urls.py  views.py
code/orders/adapters/: wms.py
code/orders/migrations/: 0001_initial.py  0002_order_quantity.py
code/orders/services/: errors.py  order.py  product.py  protocols.py
presentation/: index.html
